corrected erros and fixed spacing

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1 {
 
 body {
     background-color: rgb(49, 46, 46);
+    margin: 0;
 }
 
 div {
@@ -97,7 +98,7 @@ figcaption {
     font-family: "Abril Fatface", serif;
    }
 
-#bio {
+.bio {
     display: flex;
     justify-content: center;
 }
@@ -127,15 +128,11 @@ border: 10px solid #ebdd96;
 
 /* Hide Initial */
 .overlay {
+    display: none;
     opacity: 0;
     transform: scale(0);
   }
-  
-  
-  /* Style Full Size Modal (lightbox) Image */
-  body {
-      margin: 0;
-  }
+
   
   .overlay:target {
     opacity: 1;
